# midi-effect

./: README.markdown  imidi.cabal  midi-effect.cabal  midi-monad.cabal  playmidi.cabal
Sound/: MIDI.hs
Sound/MIDI/: Core.hs  Input.hs  Output.hs  Types.hs
meristem/improvements/: differentiate inputs  enumerate devices  filter outputs  input  instruments  multiple inputs  multiple outputs  named instruments  non-linux  percussion  percussion by source  runtime percussion
scripts/: install.sh  version.sh
src/Sound/: MIDI.hs
src/Sound/MIDI/: Core.hs  Input.hs  Monad.hs  Output.hs  Types.hs
src/Sound/MIDI/Monad/: Core.hs  Input.hs  Output.hs  Types.hs
src/Storage/: Refcount.hs
