Name:                imidi
Version:             0.7
Description:         MIDI I/O
Category:            Music
License:             MIT
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

library
    hs-source-dirs:    src/
    ghc-options:       -Wall -Werror -threaded -rtsopts=all
    exposed-modules:   Sound.MIDI
                       Sound.MIDI.Core
                       Sound.MIDI.Input
                       Sound.MIDI.Output
                       Sound.MIDI.Types

    build-depends: 
                    alsa-seq,
                    extensible-effects == 1.2.*,
                    tuple,
                    Summit >= 0.15,
                    Summit < 1.0,
                    QuickCheck >= 2,
                    base >= 4.5,
                    base < 5.0
