Name:                imidi
Version:             0.10.0
Description:         MIDI I/O
Category:            Music
License:             MIT
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

library
    hs-source-dirs:    .
    ghc-options:       -Wall -Werror -threaded -rtsopts=all
    exposed-modules:   Sound.MIDI
                       Sound.MIDI.Core
                       Sound.MIDI.Input
                       Sound.MIDI.Output
                       Sound.MIDI.Types

    build-depends: 
                    alsa-core == 0.5.*,
                    alsa-seq == 0.6.*,
                    base == 4.*,
                    basic-prelude == 0.3.8.*,
                    extensible-effects == 1.4.*,
                    hashable == 1.2.1.*,
                    lens,
                    refcount == 0.0.*,
                    refcount >= 0.0.1,
                    QuickCheck >= 2,
                    unordered-containers == 0.2.4.*
