Name:                midi-monad
Version:             0.1
Description:         Monadic MIDI I/O
Category:            Music
License:             BSD3
Author:              Ben Foppa
Maintainer:          benjamin.foppa@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

library
    hs-source-dirs:    src/
    ghc-options:       -Wall -Werror -threaded -rtsopts=all -fllvm
    exposed-modules:   Sound.MIDI.Monad Sound.MIDI.Monad.Core Sound.MIDI.Monad.Types

    build-depends: 
                    alsa-seq,
                    Summit,
                    QuickCheck >= 2,
                    base >= 4.5,
                    base < 5.0
